Change over to Mesa pktuart. Working with LatheTemporary and pktv3.bit firmware.

--- a/latheMesa/latheMesa.ini
+++ b/latheMesa/latheMesa.ini
@@ -64,6 +64,31 @@ MAX_SPINDLE_0_OVERRIDE = 1.25
 # User Created Message HAL Pins.
 #
 MESSAGE_BOLDTEXT = NONE
+MESSAGE_TEXT = Stepper Driver EStop.
+MESSAGE_TYPE = okdialog
+MESSAGE_PINNAME = estop-driver
+
+MESSAGE_BOLDTEXT = NONE
+MESSAGE_TEXT = Spindle VFD EStop.
+MESSAGE_TYPE = okdialog
+MESSAGE_PINNAME = estop-VFD
+
+MESSAGE_BOLDTEXT = NONE
+MESSAGE_TEXT = x Quadrature Fault.
+MESSAGE_TYPE = okdialog
+MESSAGE_PINNAME = estop-x-encoder
+
+MESSAGE_BOLDTEXT = NONE
+MESSAGE_TEXT = z Quadrature Fault.
+MESSAGE_TYPE = okdialog
+MESSAGE_PINNAME =  estop-z-encoder
+
+MESSAGE_BOLDTEXT = NONE
+MESSAGE_TEXT = Spindle Quadrature Fault.
+MESSAGE_TYPE = okdialog
+MESSAGE_PINNAME = estop-s-encoder
+
+MESSAGE_BOLDTEXT = NONE
 MESSAGE_TEXT = VFD using maximum motor RPM.
 MESSAGE_TYPE = okdialog
 MESSAGE_PINNAME = VFD-max-motor-rpm
@@ -238,4 +263,5 @@ I = 0
 D = 0
 FF0 = 3.18
 MAX_OUTPUT = 70
-ENCODER_SCALE = 260
+ENCODER_SCALE = -400
+LOWPASS_GAIN = 0.01
